fixed container and wrappper and css

--- a/public/lab_4/styles.css
+++ b/public/lab_4/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(141, 0, 184);
+    background-color: rgb(195, 0, 255);
 }
 .flex-outer li,
 .flex-inner {
@@ -35,8 +35,8 @@ body{
   margin-left: 0px;
   padding: 6px 12px;
   border: none;
-  background: rgb(202, 25, 25);
-  color: #e2d51e;
+  background: rgb(204, 190, 0);
+  color:rgb(195, 0, 255);
   text-transform: uppercase;
   letter-spacing: 1.2px;
   border-radius: 3px;
